--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
       - name: "Buiding docker images"
-        run: docker compose build .
+        run: docker compose build 
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
