--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,8 +15,10 @@ jobs:
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
       - name: "Buiding docker images"
         run: docker compose build 
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
+      - name: List built images
+        run: docker images
+      - name: Cleanup
+        run: docker rmi matcha-webapp:latest matcha-backend:latest
+
       - run: echo "🍏 This job's status is ${{ job.status }}."
 
