[Changes] - added env file and made parts of the backend configurable. - introduced new container for the db to separate data from processing. - added very minor logging to BE to see how it works.1 - configured watch for FE and BE for quicker dev. - added basic php.ini file.
[Issues]
- conncetion to db is broken
- logging is inconsistant/bad

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,26 +3,47 @@ name: matcha
 services:
   webapp:
     build: ./webapp
-    environment:
-      env_file: "local.env"
+    env_file: local.env
     ports:
       - "8080:80"
-    networks:
-      - front-tier
-      - back-tier
     depends_on:
+      - database
       - backend
+    develop:
+      watch:
+        - action: sync
+          path: ./webapp/src
+          target: /usr/share/nginx/html
 
   backend:
     build: ./services
-    environment:
-      env_file: "local.env"
+    env_file: local.env
     ports:
       - "8081:80"
     networks:
       - back-tier
+    depends_on:
+      - database
+    develop:
+      watch:
+        - action: sync
+          path: ./services/src
+          target: /var/www/html
+  
+  database:
+    image: mysql
+    restart: always
+    env_file: local.env
+    ports:
+      - "3306:3306"
+    networks:
+      - back-tier
+    volumes:
+      - db_storage:/var/lib/mysql
 
 networks:
   front-tier: {}
   back-tier: {}
 
+volumes:
+  db_storage:
