--- a/local.env
+++ b/local.env
@@ -1,2 +1,7 @@
-backend_host: backend
-env: local
+ENVIRONMENT: local
+BACKEND_HOST: backend
+BASE_PATH: /var/www/html/
+
+DATABASE_HOST: database:3306
+DATABASE_NAME: matcha_db
+MYSQL_ROOT_PASSWORD: chaos
